welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:5: error: ')' expected but 'false' found.
	} while (croisement()false)
                             ^