welcome.lessons.welcome.loopdowhile.Poucet.scala.code
var nbBiscuit = ""
do {
	do  {avance()
	if (estSurBiscuit()) {nbBiscuit=nBiscuit+1}
	} while (croisement()false)
	if (nbBiscuit<=2) {doite()}
	else {gauche()}
	
	
	
} while (sortieTrouvee()==false)
